# win-folder-size

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_flags.txt  vcpkg.json
.github/workflows/: ci.yml  release.yml
def/: foldersize.def
docs/: hook-targets.md  release.md  technical-overview.md
docs/release-notes/: v0.2.3.md  v0.2.4.md  v0.2.5.md
include/: everything_ipc.h  guids.h  logging.h
scripts/: build.bat  install.bat  status.bat  uninstall.bat
src/: dll_main.cpp  version.rc
src/com/: class_factory.cpp  class_factory.h  com_exports.cpp  shell_overlay.cpp  shell_overlay.h
src/core/: change_notifier.cpp  change_notifier.h  init.cpp  init.h  logging.cpp  size_cache.cpp  size_cache.h  size_formatter.cpp  size_formatter.h  size_resolver.cpp  size_resolver.h
src/hooks/: detour_wrapper.cpp  detour_wrapper.h  hook_manager.cpp  hook_manager.h  reg_query_hook.cpp  reg_query_hook.h
src/providers/: everything_client.cpp  everything_client.h  folder_scanner.cpp  folder_scanner.h
tests/: test_folder_scanner.cpp  test_size_cache.cpp  test_size_formatter.cpp
